[package]
name = "wsl-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
clap = { version = "4.0.19", features = ["derive"] }
enum-map = "2.4.1"
futures = "0.3.25"
libc = "0.2.137"
once_cell = "1.16.0"
rmp-serde = "1.1.1"
scopeguard = "1.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1", features = ["full"] }
tokio-metrics = "0.1.0"
tokio-serde = { version = "0.8.0", features = ["messagepack", "json", "cbor"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
]
